[tool.poetry]
name = "redispatcher"
version = "0.3.0"
description = "Dispatch and run distributed work asynchronously, brokered by Redis"
authors = ["Rafal Stapinski <stapinskirafal@gmail.com>"]
keywords = ["redis", "queue", "broker", "pub sub", "asynchronous message", "celery", "dispatcher", "worker"]
readme = "README.md"
license = "MIT"
homepage = "https://rafalstapinski.github.io/redispatcher"
repository = "https://github.com/rafalstapinski/redispatcher"


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.0.3"
isort = "^5.13.2"
pytest = "^8.0.1"
pytest-redis = "^3.0.2"
pytest-asyncio = "^0.23.5"
elastic-apm = "^6.20.0"
setuptools = "^69.1.0"
tomli = "^2.0.1"

[tool.poetry.scripts]
monitor = "redispatcher.monitor:monitor_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_local_folder = ["test"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 120

[tool.pylint.messages_control]
disable = "all"
enable = "unused-import"
